# chatsh

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build-dry-run.yml  build-release-and-draft-release.yml  build-release-artifacts-and-draft-release.yml  create-pull-request-to-brew.yml
.github/workflows-config/: release-drafter.yml
src/: app.rs  converter.rs  lib.rs  main.rs
src/converter/: lib.rs  openai.rs
src/converter/openai/: gpt35_turbo.rs  gpt4_32k.rs  mod.rs
