[package]
name = "chatsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


reqwest = { version = "0.11.6", features = ["blocking", "json"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0" }
inquire = { version = "0.6.1" }
colored = { version = "2" }
indicatif = { version = "0.17" }
log = { version = "0.4" }
env_logger = { version = "0.10" }
chrono = { version = "0.4" }
clap = { version = "4.2.1", features = ["derive"] }
